Fixed the slight shift?

--- a/client.css
+++ b/client.css
@@ -122,7 +122,6 @@ p {
 
 #wall {
 	grid-area: b;
-	padding: 0px;
 }
 
 #navbar {
